[package]
name = "chirpstack_api"
description = "LoRaWAN.Server I/Q Protobuf / gRPC API definitions."
version = "3.3.2"
authors = ["InnoLabs"]
license = ""
homepage = "http://lo-ra.net"
repository = "https://github.com/iBrick/chirpstack-api"
edition = "2020"

[features]
default = ["grpc_support", "rustfmt"]
grpc_support = ["tonic/transport", "tonic-build/transport", "tokio"]
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
prost = "0.6"
prost-types = "0.6.1"

tonic = { version = "0.1", features = ["codegen"], default-features = false }
tokio = { version = "0.2", features = ["macros"], optional = true }

[build-dependencies]
tonic-build = { version = "0.1", default-features = false }
